kubernetes/Case/sa_rbac.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-sa-pod
  namespace: devel
spec:
  serviceAccountName: my-sa
  containers:
  - name: my-sa-containers
    image: nginx:latest
    command: ["sleep", "3600"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
