kubernetes/Case/statefulSet.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset-case
spec:
  serviceName: nginx-web
  selector:
    matchExpressions:
      - key: app
        operator: In
        values: [nginx]
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          imagePullPolicy: IfNotPresent
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-pvc
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: nginx-pvc
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: nfs-csi
        resources:
          requests:
            storage: 1Gi
  replicas: 2
