kubernetes/Case/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-policy
spec:
  ingressClassName: nginx
  rules:
  - host: ingress.gcp.com
    http:
      paths:
        - backend:
            service:
              name: nginx-service
              port:
                number: 80
          pathType: Prefix
          path: /nginx
